[gd_scene load_steps=7 format=3 uid="uid://02xfa2f0dnck"]

[ext_resource type="PackedScene" path="res://Visuals/Units/Striker/Striker.tscn" id="1"]
[ext_resource type="Script" path="res://Code/Units/Striker.gd" id="2"]
[ext_resource type="Material" path="res://Visuals/MuzzleFlash.tres" id="3"]
[ext_resource type="PackedScene" path="res://Scene/Units/bolt_module.tscn" id="4_m2lq2"]

[sub_resource type="QuadMesh" id="2"]
material = ExtResource("3")
size = Vector2(0.2, 0.2)

[sub_resource type="BoxShape3D" id="1"]
size = Vector3(1, 0.9, 1.75)

[node name="Striker" type="RigidBody3D"]
mass = 10.0
max_contacts_reported = 5
contact_monitor = true
script = ExtResource("2")
turret_rotation_speed = 10.0
acceleration = 4
reverse = 8
max_speed = 30
slip = 10
look_speed = 50
max_health = 30.0
armor = 4.0
max_fuel = 30.0
max_supply = 20.0
roles = ["Move", "Scout", "Attack"]

[node name="Striker" parent="." instance=ExtResource("1")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, -0.05)

[node name="Barrel" parent="Striker/Node2/Main/Turret/Barrel2" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, -0.078)

[node name="RayCast_ideal" type="RayCast3D" parent="Striker/Node2/Main/Turret/Barrel2" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.233)
visible = false
target_position = Vector3(0, 0, -15)

[node name="RayCast_Actual" type="RayCast3D" parent="Striker/Node2/Main/Turret/Barrel2" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.233)
target_position = Vector3(0, 0, -25)

[node name="MuzzleFlash" type="Marker3D" parent="Striker/Node2/Main/Turret/Barrel2/RayCast_Actual"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, -0.1)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="Striker/Node2/Main/Turret/Barrel2/RayCast_Actual/MuzzleFlash"]
mesh = SubResource("2")
skeleton = NodePath("../..")

[node name="MeshInstance2" type="MeshInstance3D" parent="Striker/Node2/Main/Turret/Barrel2/RayCast_Actual/MuzzleFlash"]
transform = Transform3D(1, -8.74228e-08, 3.17865e-08, -8.74228e-08, -1, 0, 3.17865e-08, -2.77886e-15, -1, 0, 0, 0)
mesh = SubResource("2")
skeleton = NodePath("../..")

[node name="No Hit" type="Marker3D" parent="Striker/Node2/Main/Turret/Barrel2/RayCast_Actual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -50)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.45, 0)
shape = SubResource("1")

[node name="Agent" type="NavigationAgent3D" parent="."]
avoidance_enabled = true
radius = 1.5

[node name="Bolt Module" parent="." instance=ExtResource("4_m2lq2")]
accuracy = 1.0
fire_rate = 12.0
damage = 0.5

[editable path="Striker"]
